--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   --page-2-color: tan;
   --page-3-color: teal;
   --page-4-color: slateblue;
-  --animate-speed: 1s;
+  --animate-speed: 2s;
 }
 
 body {
@@ -74,4 +74,30 @@ body {
 .btn-dark:hover {
   background-color: #f4f4f4;
   color: #333;
+}
+
+/* page animation */
+
+#page-1 h1 {
+  transform: translateY(-1200px);
+  animation: heading var(--animate-speed) forwards ease-in;
+}
+
+#page-1 p {
+  transform: translateX(-1800px);
+  animation: text var(--animate-speed) forwards ease-in 2s;
+}
+
+/* keyframes */
+
+@keyframes heading {
+  to {
+    transform: translateY(0);
+  }
+}
+
+@keyframes text {
+  to {
+    transform: translateX(0);
+  }
 }
